--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@material/button": "^0.35.0",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
+    "classnames": "^2.2.6",
     "ejs": "^2.6.1",
     "eslint": "^4.19.1",
     "isomorphic-fetch": "^2.2.1",
