--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.2.6",
     "ejs": "^2.6.1",
     "eslint": "^4.19.1",
+    "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
     "materialize-css": "^1.0.0-rc.1",
     "morgan": "^1.9.0",
