--- a/package.json
+++ b/package.json
@@ -28,25 +28,25 @@
     "eslint": "^4.19.1",
     "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
-    "materialize-css": "^1.0.0-rc.1",
-    "morgan": "^1.9.0",
-    "winston": "^2.4.2"
+    "materialize-css": "^1.0.0",
+    "morgan": "^1.9.1",
+    "winston": "^2.4.4"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.0",
+    "mini-css-extract-plugin": "^0.4.3",
     "node-sass": "^4.9.3",
-    "nodemon": "^1.17.4",
+    "nodemon": "^1.18.4",
     "nodemon-webpack-plugin": "^4.0.3",
     "rimraf": "^2.6.2",
-    "sass-loader": "^7.0.1",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^2.1.5",
+    "webpack-dev-server": "^3.1.9",
     "webpack-node-externals": "^1.7.2"
   }
 }
