--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
     "classnames": "^2.2.6",
+    "compression": "^1.7.3",
     "ejs": "^2.6.1",
     "eslint": "^4.19.1",
     "express": "^4.16.3",
