--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,23 @@
 version: "3"
 services:
-   web:
-       build: .
-       ports:
-           - "3000"
-       environment:
-           - PORT=3000
-           - DATA_PATH=${DATA_PATH}
+    backend:
+        build: ./backend
+        ports:
+            - "3000"
+        networks:
+            youtoop:
+                aliases:
+                    - backend
+        environment:
+            - PORT=3000
+            - DATA_PATH=${DATA_PATH}
+    frontend:
+        build: ./frontend
+        ports:
+            - "80:80"
+        networks:
+            youtoop:
+                aliases:
+                    - frontend
+networks:
+    youtoop:
