--- a/backend/package.json
+++ b/backend/package.json
@@ -19,12 +19,15 @@
     "chalk": "^2.4.1",
     "classnames": "^2.2.6",
     "compression": "^1.7.3",
+    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "eslint": "^4.19.1",
     "express": "^4.16.3",
     "isomorphic-fetch": "^2.2.1",
+    "knex": "^0.16.3",
     "materialize-css": "^1.0.0",
     "morgan": "^1.9.1",
+    "mysql": "^2.16.0",
     "winston": "^2.4.4"
   },
   "devDependencies": {
